--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,6 @@ project(KDS_Semestral C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(Server server.c image.h image.c communication.c communication.h)
-add_executable(Client client.c image.h image.c communication.c communication.h)
-add_executable(CRC crc.c crc.h)
-add_executable(test test.c)
+add_executable(Server server.c image.h image.c communication.c communication.h crc.c crc.h)
+add_executable(Client client.c image.h image.c communication.c communication.h crc.c crc.h)
+add_executable(Test test.c test.c communication.h communication.c crc.c crc.h)
