--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(KDS_Semestral C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(Sender sender.c image.h image.c communication.c communication.h crc.c crc.h sha256.c sha256.h)
-add_executable(Receiver receiver.c image.h image.c communication.c communication.h crc.c crc.h sha256.c sha256.h)
+add_executable(Sender sender.c communication.c communication.h crc.c crc.h sha256.c sha256.h utils.c utils.h main.h)
+add_executable(Receiver receiver.c communication.c communication.h crc.c crc.h sha256.c sha256.h utils.c utils.h main.h)
 add_executable(Test test.c sha256.h sha256.c)
